# hello_cotire

./: CMakeLists.txt  main.cpp  precompiled.h
